# opengl-expermients

./: CMakeLists.txt  Context.cc  Context.cpp  Context.h  InputHandler.cc  InputHandler.cpp  InputHandler.h  LICENSE  Model.cc  Model.cpp  Model.h  julia_fragment_shader.glsl  load_shaders.cc  load_shaders.cpp  load_shaders.h  main.cc  main.cpp  mandelbrot.cc  mandelbrot_fragment_shader.glsl  vertex_shader.glsl
shaders/: fragment_shader.glsl  mandelbrot_fragment_shader.glsl  mandelbrot_vertex_shader.glsl
